--- a/C Piscine C 09/ex01/Makefile
+++ b/C Piscine C 09/ex01/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
+#    Makefile.                                          :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ecaceres <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: jcuenca <jcuenca@student.42.fr             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2019/08/12 12:36:23 by ecaceres          #+#    #+#              #
-#    Updated: 2019/08/12 12:36:25 by ecaceres         ###   ########.fr        #
+#    Created: 2021/08/08 07:06:00 by jcuenca           #+#    #+#              #
+#    Updated: 2021/08/08 07:28:00 by jcuenca          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
